@@ -1,3 +1,5 @@
+-- fixed stream_size rule option
+
 15/01/05 - build 132
 
 -- added this change log
